docs(docs): fix bullets at index, add definition list at glossary

--- a/packages/docs/design-docs/ux-writing/glossary.mdx
+++ b/packages/docs/design-docs/ux-writing/glossary.mdx
@@ -1,81 +1,139 @@
+import { Dos, IconDo  } from "@components/big-design/DosAndDonts";
+
 # Glossary
 
 We know the discourse of ecommerce changes over time. If we find a word choice in our vocabulary doesn’t make sense anymore, we'll change it.
 
 ### 1, 2, 3
 
-**2-step verification**
-
+<dl class="ml-4">
+<dt class="font-bold mt-4">
+2-step verification
+</dt>
+<dd>
 Use “2-step verification.” Don’t use “2 step verification” or “two-step verification.”
+</dd>
 
-**3D Secure**
-
+<dt class="font-bold mt-4">
+3D Secure
+</dt>
+<dd>
 3D Secure is a fraud protection layer available to users as long as they’re using a participating payment gateway. Treat 3D Secure as a proper noun and capitalize accordingly.
+</dd>
+
+</dl>
 
 ### A
 
-**able to**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+able to
+</dt>
+<dd>
 Avoid using sentences using “You will be able to….” Instead, just say “You can….” It’s shorter and easier to scan.
+</dd>
 
-**add**
-
+<dt class="font-bold mt-4">
+add
+</dt>
+<dd>
 Use “add” when referring to the act of putting a thing with another group of things. Compare this with “connect,” which refers to the act of joining two things together.
 
 For example, users can add products to their catalog. They can also connect their BigCommerce site with a marketplace, like Amazon or Facebook.
-
-**App Marketplace**
-
+</dd>
+<dt class="font-bold mt-4">
+App Marketplace
+</dt>
+<dd>
 App Marketplace is a proper noun. Capitalize both words.
+</dd>
+
+</dl>
 
 ### B
 
-**back**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+back
+</dt>
+<dd>
 “Back” means, “I want to return to the previous step in this workflow without quitting the current process.” Don’t use “back” in place of “cancel.”
+</dd>
 
-**BigCommerce**
-
+<dt class="font-bold mt-4">
+BigCommerce
+</dt>
+<dd>
 Use BigCommerce. Don’t use Bigcommerce or Big Commerce. And never abbreviate as BC.
+</dd>
 
-**Buy Now, Pay Later (BNPL)**
-
+<dt class="font-bold mt-4">
+Buy Now, Pay Later (BNPL)
+</dt>
+<dd>
 Treat “Buy Now, Pay Later” as a branded, proper noun and use title case.
+</dd>
 
-**buy online, pick up in-store (BOPIS)**
-
+<dt class="font-bold mt-4">
+buy online, pick up in-store (BOPIS)
+</dt>
+<dd>
 “Pick up” is a verb and should be two words, no hyphen. “In-store” is an adjective describing the type of pick up. In the UK, “buy online, pick up in-store” is called “click and collect.”
 
 At BigCommerce, the default language for UX writing is American English. Accordingly, always use “buy online, pick up in-store.”
 
 Don’t abbreviate as BOPIS.
+</dd>
+
+</dl>
 
 ### C
 
-**cancel**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+cancel
+</dt>
+<dd>
 “Cancel” means, “I don’t want to do this anymore.” Any in-progress changes should be discarded as a result of clicking the button.
 
 Don’t use “stop,” “pause,” “terminate” or “nevermind” and don’t use “cancel” in place of “back.”
+</dd>
 
-**catalog**
-
+<dt class="font-bold mt-4">
+catalog
+</dt>
+<dd>
 A catalog is a collection of virtual representations of a merchant’s saleable products for a channel, stored within the BigCommerce platform. A catalog contains products. Products can be both physical and digital. For the latter, think music downloads, digital images, treatments, services, etc. A collection of products, sorted by the user for merchandising purposes, is called a category.
+</dd>
 
-**category**
-
+<dt class="font-bold mt-4">
+category
+</dt>
+<dd>
 A collection of products, sorted by the user for merchandising purposes.
+</dd>
 
-**channel**
-
+<dt class="font-bold mt-4">
+channel
+</dt>
+<dd>
 A place where a BigCommerce user can market and sell goods. Channels include storefronts, marketplaces, advertising and social media.
+</dd>
 
-**Channel Manager**
-
+<dt class="font-bold mt-4">
+Channel Manager
+</dt>
+<dd>
 Channel Manager is a proper noun. Capitalize both words.
+</dd>
 
-**check out, checkout**
-
+<dt class="font-bold mt-4">
+check out, checkout
+</dt>
+<dd>
 Use check out (verb) when referring to the act of paying for items and creating an order.
 
 Use checkout (noun) when talking about the place shoppers go to pay for items and create an order.
@@ -83,211 +141,383 @@ Use checkout (noun) when talking about the place shoppers go to pay for items an
 Use checkout (adjective) when describing the type of page or process.
 
 Never use check-out.
+</dd>
 
+<Dos>
+<div class="hidden">
 Do
-
+</div>
  - Ready to check out?
  - When you’re done shopping, proceed to the checkout.
  - Navigate to the checkout page.
+</Dos>
 
-**click**
-
+<dt class="font-bold mt-4">
+click
+</dt>
+<dd>
 Since we don’t know if a user is on a desktop or mobile device, avoid using “click” when instructing the user on how to complete an action within the UI. Whenever possible, write around the issue with generic verbs like “choose,” “select” or “pick.”
 
 Avoid using “hit."
+</dd>
 
-**clickthrough, click-through**
-
+<dt class="font-bold mt-4">
+clickthrough, click-through
+</dt>
+<dd>
 Use “clickthrough” (noun) when referring to an instance or multiple instances of clickthrough. Use “click through” (verb) when referring to the act of following a link or button to another site or location.
 
 Don’t use “click-through.”
+</dd>
 
-**close**
-
+<dt class="font-bold mt-4">
+close
+</dt>
+<dd>
 Use “close” instead of “exit” for modals and pop-ups.
+</dd>
 
-**connect**
-
+<dt class="font-bold mt-4">
+connect
+</dt>
+<dd>
 Use “connect” when referring to the act of joining two things together. Compare this to “add,” which refers to the act of putting a thing with another group of things.
 
 For example, users can add products to their catalog. They can also connect their BigCommerce site with a marketplace, like Amazon or Facebook.
 
 When writing about an integration between BigCommerce and another third party technology, you’ll probably be using “connect.”
+</dd>
 
-**continue**
-
+<dt class="font-bold mt-4">
+continue
+</dt>
+<dd>
 “Continue” means “I want to go forward a step in this workflow,” like an onboarding, for example.
 
 Do not use “next.”
+</dd>
 
-**control panel**
-
+<dt class="font-bold mt-4">
+control panel
+</dt>
+<dd>
 Control panel is not a proper noun. No need to capitalize. Of course, always capitalize the first letter of the first word if it appears at the start of a sentence. Keep in mind, there are very few instances when you’ll need to refer to the control panel by name. Most of the time you’ll just say “store.”
+</dd>
 
-**create**
-
+<dt class="font-bold mt-4">
+create
+</dt>
+<dd>
 Use “create,” as opposed to “save,” as the CTA when creating a product, customer, setting, object, item etc. for the first time. When making changes to something that already exists, use “save” as the CTA.
+</dd>
 
-**customer**
-
+<dt class="font-bold mt-4">
+customer
+</dt>
+<dd>
 Use “customer” when referring to our users’ end-user: the customer. You can use “customer” and “shopper” interchangeably. Just keep in mind, depending on the context, there can be a subtle difference between a shopper and a customer. A shopper is a visitor to a merchant’s storefront who hasn’t necessarily purchased anything.
 
 To avoid confusion, try not to use “customer” to refer to BigCommerce clients. Use “merchant,” “retailer” or “brand” instead.
+</dd>
+
+</dl>
 
 ### D
 
-**delete**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+delete
+</dt>
+<dd>
 Use “delete” for destructive behaviors. Don’t use “remove” or “dismiss.”
+</dd>
 
-**deploy**
-
+<dt class="font-bold mt-4">
+deploy
+</dt>
+<dd>
 Use “deploy” when talking about a one-way connection between applications. If one application sends data to another, one time or on an occasional basis, it’s deploying.
+</dd>
 
-**details**
-
+<dt class="font-bold mt-4">
+details
+</dt>
+<dd>
 On its own, as a clickable, UI item, use “details.” Don’t use “information” or “info.”
+</dd>
 
-**Dev Center**
-
+<dt class="font-bold mt-4">
+Dev Center
+</dt>
+<dd>
 A resource center for developers looking to make their own solutions using the BigCommerce platform. Dev Center is a proper noun, so capitalize both words.
+</dd>
 
-**disable**
-
+<dt class="font-bold mt-4">
+disable
+</dt>
+<dd>
 Use “disable” when referring to the act of turning something off. Don’t use “turn off” or “deactivate.”
+</dd>
+
+</dl>
 
 ### E
 
-**ecommerce**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+ecommerce
+</dt>
+<dd>
 Use “ecommerce” (or "Ecommerce" if at the start of a sentence). Never use “e-commerce” or “eCommerce.”
+</dd>
 
-**edit**
-
+<dt class="font-bold mt-4">
+edit
+</dt>
+<dd>
 Use “edit” when referring to the act of changing previously entered information. Don’t use “change,” “modify,” “update” or “manage.”
+</dd>
 
-**email**
-
+<dt class="font-bold mt-4">
+email
+</dt>
+<dd>
 Do not use “e-mail.” For form field labeling use “Email” instead of “Email address.”
+</dd>
 
-**enable**
-
+<dt class="font-bold mt-4">
+enable
+</dt>
+<dd>
 Use “enable” when referring to the act of turning something on. Don’t use “activate,” “deactivate,” “turn on” or “turn off.”
+</dd>
+
+</dl>
 
 ### F
 
-**finish**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+finish
+</dt>
+<dd>
 Use “finish” as the final CTA in a multi-step workflow, like an onboarding flow, for example.
+</dd>
+
+</dl>
 
 ### G
 
-**got it**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+got it
+</dt>
+<dd>
 “Got it” means “I understand.” Clicking “got it” is merely an acknowledgment on the part of the user. No change or action should take place as a result of clicking the button.
+</dd>
+
+</dl>
 
 ### H
 
-**headless**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+headless
+</dt>
+<dd>
 A technology stack that uses a third party solution to create and maintain the shopper-facing front-end of a user’s store, while using BigCommerce for the administrative back-end.
+</dd>
 
-**homepage**
-
+<dt class="font-bold mt-4">
+homepage
+</dt>
+<dd>
 Use “homepage,” one word, not “home page.”
+</dd>
+
+</dl>
 
 ### I
 
-**in stock**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+in stock
+</dt>
+<dd>
 No hyphen.
+</dd>
 
-**in-store**
-
+<dt class="font-bold mt-4">
+in-store
+</dt>
+<dd>
 Use “in-store” when describing where something exists or takes place; e.g., “pick up in-store” or “in-store special.” Don’t use “in store.”
+</dd>
 
-**internet**
-
+<dt class="font-bold mt-4">
+internet
+</dt>
+<dd>
 Do not capitalize unless at the start of a sentence.
+</dd>
+
+</dl>
 
 ### J
 
+<dl class="ml-4">
+
+</dl>
+
 ### K
 
-**Knowledge Base**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+Knowledge Base
+</dt>
+<dd>
 Treat “Knowledge Base” as a proper noun and capitalize both words. Don’t abbreviate as “KB.”
+</dd>
+
+</dl>
 
 ### L
 
-**Learn more**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+Learn more
+</dt>
+<dd>
 Use “Learn more” when linking from the control panel to an article in the Knowledge Base.
+</dd>
 
-**log in, login**
-
+<dt class="font-bold mt-4">
+log in, login
+</dt>
+<dd>
 Use “log in” as a verb describing the act of entering one’s username and password to access an account.
 
 Use “login” as a noun referring to the credentials used to log in.
 
 Never use “log-in,” “sign in” or “sign-in.”
+</dd>
+
+</dl>
 
 ### M
 
-**Multi-Storefront**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+Multi-Storefront
+</dt>
+<dd>
 Multi-Storefront should be capitalized when talking about the specific BigCommerce solution. If speaking about the technology in general, then use lowercase "multi-storefront."
+</dd>
 
-**multi-channel**
-
+<dt class="font-bold mt-4">
+multi-channel
+</dt>
+<dd>
 As in “multi-channel marketing” or “multi-channel fulfillment,” should be two words, hyphenated.
+</dd>
+
+</dl>
 
 ### N
 
-**need**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+need
+</dt>
+<dd>
 Use “need” instead of “must” when referring to something merchants or shoppers “need” to do.
+</dd>
+
+</dl>
 
 ### O
 
-**OK**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+OK
+</dt>
+<dd>
 “OK” means “Yes, I want to do this.” Never use “okay” or “Ok.”
+</dd>
 
-**omnichannel**
-
+<dt class="font-bold mt-4">
+omnichannel
+</dt>
+<dd>
 As in “omnichannel marketing,” should be one word. Don’t abbreviate as “omni.”
+</dd>
 
-**onboarding**
-
+<dt class="font-bold mt-4">
+onboarding
+</dt>
+<dd>
 Primarily refers to the new user workflows and helpful tips shown to merchants on the homepage of the Control Panel. Can also refer to the steps taken to connect a channel in Channel Manager.
+</dd>
 
-**Optimized One-Page Checkout**
-
+<dt class="font-bold mt-4">
+Optimized One-Page Checkout
+</dt>
+<dd>
 Treat as a branded, proper noun and capitalize accordingly.
+</dd>
 
-**optional vs. required**
-
+<dt class="font-bold mt-4">
+optional vs. required
+</dt>
+<dd>
 Label optional fields. Don’t label required fields. More often than not, a given settings page will have more required fields than optional fields. As such, it makes more sense to denote any optional fields as those are the ones deviating from the merchant’s expectations. Not to mention, it’s less cluttered looking than labeling all the required fields.
 
 Also keep in mind, if a given setting has a default option, it’s not an optional setting and shouldn’t be labeled as such.
+</dd>
+
+</dl>
 
 ### P
 
-**page**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+page
+</dt>
+<dd>
 Avoid using “webpage” and “web page.” Use “page” instead.
+</dd>
 
-**Page Builder**
-
+<dt class="font-bold mt-4">
+Page Builder
+</dt>
+<dd>
 Used to create and edit pages on a BigCommerce site. Treat Page Builder as a proper noun and capitalize accordingly.
+</dd>
 
-**phone**
-
+<dt class="font-bold mt-4">
+phone
+</dt>
+<dd>
 Use “Phone” instead of “Phone number” when labelling form fields.
+</dd>
 
-**pick up, pickup**
-
+<dt class="font-bold mt-4">
+pick up, pickup
+</dt>
+<dd>
 “Pick up” is always a verb, as in “buy online, pick up in-store” or “in-store pick up” or “ready for pick up.”
 
 “Pickup” can be an adjective or a noun. For example, “pickup methods.” In this example “pickup” is acting as an adjective modifying a noun. What kind of methods are these? They are pickup methods.
@@ -295,134 +525,232 @@ Use “Phone” instead of “Phone number” when labelling form fields.
 “Pickup” as a noun refers specifically to a type of vehicle. For example, Philip drives a pickup truck.
 
 Never use “pick-up.”
+</dd>
 
-**please**
-
+<dt class="font-bold mt-4">
+please
+</dt>
+<dd>
 Use “please” only when asking the user to go out of their way to do something. For example, “Please update your credit card info.” Otherwise, it’s okay to just ask the user to perform basic, everyday actions.
+</dd>
 
-**pre-order**
-
+<dt class="font-bold mt-4">
+pre-order
+</dt>
+<dd>
 Don’t use “preorder” or “pre order.”
+</dd>
 
-**product**
-
+<dt class="font-bold mt-4">
+product
+</dt>
+<dd>
 A virtual representation of something a merchant sells on their BigCommerce store. A catalog contains products. Products can be both physical and digital. For the latter, think music downloads, digital images, treatments, services, etc. A collection of products, sorted by the user for merchandising purposes, is called a category.
+</dd>
 
-**Product Filtering**
-
+<dt class="font-bold mt-4">
+Product Filtering
+</dt>
+<dd>
 Product Filtering is a proper noun when referring to the specific BigCommerce tool. If you’re talking about the general concept, don’t capitalize.
+</dd>
 
-### Q
+</dl>
 
-### R
+### Q, R, S
 
-### S
+<dl class="ml-4">
 
-**save**
-
+<dt class="font-bold mt-4">
+save
+</dt>
+<dd>
 Use “save” when applying changes or saving edits to a product, customer, setting, object, item etc that already exists.
+</dd>
 
-**Script Manager**
-
+<dt class="font-bold mt-4">
+Script Manager
+</dt>
+<dd>
 Treat as a proper noun.
+</dd>
 
-**select**
-
+<dt class="font-bold mt-4">
+select
+</dt>
+<dd>
 Use “select” when referring to the act of selecting something in the UI, like a menu item. Avoid using “choose.”
+</dd>
 
-**setup, set up**
-
+<dt class="font-bold mt-4">
+setup, set up
+</dt>
+<dd>
 Use “setup” (noun) when referring to an arrangement of things, usually settings. Use “set up” (verb) when referring to the act of creating a setup.
+</dd>
 
-**shopper**
-
+<dt class="font-bold mt-4">
+shopper
+</dt>
+<dd>
 Use “shopper” when referring to our users’ end-user: the shopper. You can use “customer” and “shopper” interchangeably. Just keep in mind, depending on the context, there can be a subtle difference between a shopper and a customer. A shopper is a visitor to a merchant’s storefront who hasn’t necessarily purchased anything.
+</dd>
 
-**Stencil**
-
+<dt class="font-bold mt-4">
+Stencil
+</dt>
+<dd>
 BigCommerce’s theme engine. Stencil is a proper noun so capitalize accordingly. When referring to themes created using Stencil, use “Stencil theme.” Don’t use “Stencil Theme” or “Stencil-based theme.”
+</dd>
 
-**store**
-
+<dt class="font-bold mt-4">
+store
+</dt>
+<dd>
 An online business built on the BigCommerce platform. Use “store” when referring to the administrative portion of a BigCommerce site and “storefront” when referring to the shopper-facing portion.
+</dd>
 
-**storefront**
-
+<dt class="font-bold mt-4">
+storefront
+</dt>
+<dd>
 The shopper-facing part of a user’s online store. A store may have more than one storefront for different regions and customer segments (by way of Multi-Storefront).
+</dd>
 
 Don’t use “store-front” or “store front.”
 
-**Style Editor**
-
+<dt class="font-bold mt-4">
+Style Editor
+</dt>
+<dd>
 The Style Editor was phased out with the introduction of Page Builder. Only use “Style Editor” when talking about legacy themes.
+</dd>
 
-**subtotal**
-
+<dt class="font-bold mt-4">
+subtotal
+</dt>
+<dd>
 Use “subtotal,” one word. Don’t use “sub-total.”
+</dd>
 
-**Support PIN**
-
+<dt class="font-bold mt-4">
+Support PIN
+</dt>
+<dd>
 Don’t use “support PIN,” “support pin,” “Support Pin” or any combination thereof. Also, PIN is an acronym for personal identification number so definitely don’t use “Support PIN number” as that would be redundant. Treat Support PIN as a proper noun and capitalize accordingly.
+</dd>
 
-**sync**
-
+<dt class="font-bold mt-4">
+sync
+</dt>
+<dd>
 Use “sync” when talking about a two-way connection between applications. If two applications share data back and forth, they are syncing.
+</dd>
+
+</dl>
 
 ### T
 
-**tap**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+tap
+</dt>
+<dd>
 Use “tap” when writing instructions specifically for the mobile app. Otherwise, write around the issue with generic verbs like “choose,” “select” or “pick” instead.
+</dd>
 
-**theme editor**
-
+<dt class="font-bold mt-4">
+theme editor
+</dt>
+<dd>
 The theme editor was phased out with the introduction of Page Builder. Only use “theme editor” when talking about legacy themes.
+</dd>
 
-**third party**
-
+<dt class="font-bold mt-4">
+third party
+</dt>
+<dd>
 An external partner. Don’t use “third-party.”
+</dd>
 
-**two-factor authentication**
-
+<dt class="font-bold mt-4">
+two-factor authentication
+</dt>
+<dd>
 If abbreviating use “2FA.”
+</dd>
+
+</dl>
 
 ### U
 
-**username**
+<dl class="ml-4">
 
+<dt class="font-bold mt-4">
+username
+</dt>
+<dd>
 One word, not “user name.”
+</dd>
+
+</dl>
 
 ### V
 
-**variations**  
+<dl class="ml-4">
+
+<dt class="font-bold mt-4">
+variations
+</dt>
+<dd>
 Different versions of the same design theme; e.g., different color schemes. To avoid confusion with product variants, don’t use “variants” or “versions” when talking about design themes.
-
-**variants**
-
+</dd>
+<dt class="font-bold mt-4">
+variants
+</dt>
+<dd>
 Different product options; e.g., color and size.
+</dd>
 
-**view**
-
+<dt class="font-bold mt-4">
+view
+</dt>
+<dd>
 Use “view” when referring to the act of examining the contents of a UI item. Don’t use “read,” “open,” “preview,” “see” or “expand.”
+</dd>
 
-**website**
-
+<dt class="font-bold mt-4">
+website
+</dt>
+<dd>
 One word, no space.
+</dd>
 
-**wishlist**
-
+<dt class="font-bold mt-4">
+wishlist
+</dt>
+<dd>
 Do not use wish list.
+</dd>
 
-### X
+</dl>
 
-### Y
+### X, Y, Z
 
-### Z
+<dl class="ml-4">
 
-**ZIP code**
-
+<dt class="font-bold mt-4">
+ZIP code
+</dt>
+<dd>
 ZIP is an acronym so capitalize accordingly.
+</dd>
 
-**Zoom2u**
-
+<dt class="font-bold mt-4">
+Zoom2u
+</dt>
+<dd>
 Zoom2u is an on-demand, same-day express courier‎ in Australia. Treat Zoom2u as a proper noun and capitalize accordingly.
+</dd>
+</dl>
