docs(docs): corrections based on feedback round

--- a/packages/docs/design-docs/ux-writing/localization.mdx
+++ b/packages/docs/design-docs/ux-writing/localization.mdx
@@ -3,9 +3,9 @@ import { ComparisonTable } from "@components/big-design/ComparisonTable";
 
 # Localization
 
-At BigCommerce, we use American English as the default language for UX writing. That doesn’t mean, however, we should run roughshod over the design without considering our global audience.
+At BigCommerce, we use American English as the default language for UX writing. That doesn’t mean, that we shouldn't consider our global audience when designing.
 
-Regardless of the user, the country, or the region, we should take care to avoid words and phrases that may cause confusion or break the UI during localization.
+Regardless of the user, the country, or the region, take care to avoid words and phrases that may cause confusion or break the UI during localization.
 
 **Watch out for idiomatic expressions, metaphors, cliches and slang**
 
