--- a/packages/docs/design-docs/ux-writing/the-basics.mdx
+++ b/packages/docs/design-docs/ux-writing/the-basics.mdx
@@ -1,21 +1,8 @@
 import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-design/DosAndDonts";
+import FigmaSample from "@components/big-design/FigmaSample";
 import { ComparisonTable } from "@components/big-design/ComparisonTable";
 
 # The basics
-
-## Intro
-
-The purpose of the _BigCommerce_ _UX writing guide_ is to present a consistent, coherent and competent voice to BigCommerce merchants and their shoppers as it relates to in-product, customer-facing communication, aka microcopy.
-
-Writers, researchers, designers and developers, both internal and external, who have a hand in designing BigCommerce products can refer to this guide anytime there’s a question about the writing.
-
-Not sure if you need a period at the end of a heading?
-
-Is there a difference between “log in” and “login?”
-
-Can the words “back” and “cancel” be used interchangeably?
-
-The answers to these questions, and many more, can be found in the pages of this guide.
 
 ## Voice and tone
 
@@ -62,7 +49,7 @@ You can’t turn on this setting until you connect your PayPal account.
 </Donts>
 </DosAndDonts>
 
-You should also watch out for deceptive design (sometimes called dark UX). Deceptive design refers to any friction or tricks present in the UI, put there to try and get users to do something they probably don’t want to do.. If you’ve ever had a hard time canceling or unsubscribing from an online account — that’s deceptive design. If you’ve ever been made to feel bad about your decisions — that’s deceptive design. Don’t do it.
+You should also watch out for deceptive design (sometimes called dark UX). Deceptive design refers to any friction or tricks present in the UI, put there to try and get users to do something they probably don’t want to do. If you’ve ever had a hard time canceling or unsubscribing from an online account — that’s deceptive design. If you’ve ever been made to feel bad about your decisions — that’s deceptive design. Don’t do it.
 
 
 
