--- a/packages/docs/design-docs/ux-writing/grammar-and-mechanics.mdx
+++ b/packages/docs/design-docs/ux-writing/grammar-and-mechanics.mdx
@@ -53,12 +53,11 @@ From [Nielsen Norman Group](https://www.nngroup.com/articles/web-writing-show-nu
 > - Use numerals even when the number is the first word in a sentence or bullet point.
 > 
 > - Use numerals for big numbers up to one billion:
+>   - 2,000,000 is better than two million.
 > 
-> - 2,000,000 is better than two million.
+>   - Two trillion is better than 2,000,000,000,000 because most people can't interpret that many zeros.
 > 
-> - Two trillion is better than 2,000,000,000,000 because most people can't interpret that many zeros.
-> 
-> - As a compromise, you can often use numerals for the significant digits and write out the magnitude as a word. For example, write 24 billion (not twenty-four billion or 24,000,000,000).
+>   - As a compromise, you can often use numerals for the significant digits and write out the magnitude as a word. For example, write 24 billion (not twenty-four billion or 24,000,000,000).
 
 NN/g still recommends writing out numbers that don’t represent specific data. In the example below, it’s better to write out “thousands” than “1000s.”
 
@@ -71,7 +70,7 @@ Thousands of online stores are created using BigCommerce every year.
 </div>
 </Dos>
 
-## Passive vs. active voice
+## Active vs. passive voice
 
 Try to use the active voice. It’s simpler and more direct than the passive voice. Not sure what the difference is between active and passive? Here are some examples:
 
