docs(docs): grammar and mechanics breakout, more corrections

--- a/packages/docs/design-docs/ux-writing/index.mdx
+++ b/packages/docs/design-docs/ux-writing/index.mdx
@@ -1,4 +1,27 @@
+import LandingCard from "@components/Card/LandingCard";
+import CardGrid from "@components/Card/CardGrid";
+import Icon from "@components/icons/Icon";
+
 # UX writing guide
+
+<CardGrid>
+  <LandingCard
+    className="bg-white"
+    variant="secondary"
+    title="Learn the basics"
+    description="Get to know the basic principles on how we communicate with our users."
+    href="the-basics"
+    icon={<Icon name="widgets" />}
+  />
+  <LandingCard
+    className="bg-white"
+    variant="secondary"
+    title="Jump to glossary"
+    description="Learn how to use specific words within the BigCommerce ecosystem."
+    href="glossary"
+    icon={<Icon name="world" />}
+  />
+</CardGrid>
 
 The purpose of the **BigCommerce UX writing guide** is to present a consistent, coherent and competent voice to BigCommerce merchants and their shoppers as it relates to in-product, customer-facing communication, aka microcopy.
 
