--- a/packages/docs/design-docs/ux-writing/the-basics.mdx
+++ b/packages/docs/design-docs/ux-writing/the-basics.mdx
@@ -1,5 +1,5 @@
+import Icon from "@components/icons/Icon";
 import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-design/DosAndDonts";
-import FigmaSample from "@components/big-design/FigmaSample";
 import { ComparisonTable } from "@components/big-design/ComparisonTable";
 
 # The basics
@@ -64,7 +64,7 @@ You should also watch out for deceptive design (sometimes called dark UX). Decep
 
 ## Don’t get meta
 
-Have you ever watched a movie where the characters talked about being in a movie? That’s what it means to be [meta](https://www.merriam-webster.com/dictionary/meta "https://www.merriam-webster.com/dictionary/meta"). The _Scream_ and _Deadpool_ movies are great examples. The characters seem to know they’re in a movie and help the audience by explaining what’s happening.
+Have you ever watched a movie where the characters talked about being in a movie? That’s what it means to be [meta <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.merriam-webster.com/dictionary/meta "https://www.merriam-webster.com/dictionary/meta"). The _Scream_ and _Deadpool_ movies are great examples. The characters seem to know they’re in a movie and help the audience by explaining what’s happening.
 
 A good design, like a bad movie, should be predictable. If we need to get meta and explain where something is or how to use it within the UI itself, then we should take a second look at the UI.
 
@@ -82,7 +82,7 @@ The goal of this section of the UX writing guide is to give you a quick gloss on
 
 ### What is inclusive language?
 
-[Inclusive language](https://www.collinsdictionary.com/dictionary/english/inclusive-language "https://www.collinsdictionary.com/dictionary/english/inclusive-language") is defined as:
+[Inclusive language <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.collinsdictionary.com/dictionary/english/inclusive-language "https://www.collinsdictionary.com/dictionary/english/inclusive-language") is defined as:
 
 > Language that avoids the use of certain expressions or words that might be considered to exclude particular groups of people, esp gender-specific words, such as ‘man,’ ‘mankind,’ and masculine pronouns, the use of which might be considered to exclude women.
 
@@ -152,4 +152,5 @@ Only mention gender, sexual orientation, religion, race, age or physical abiliti
 **When all else fails, write around the pronouns**
 
 In many cases you can reword your sentences and avoid using pronouns in the first place.
+
 
