docs: add ux writing guide mdx to support dev dos portal

--- a/packages/docs/design-docs/ux-writing/glossary.mdx
+++ b/packages/docs/design-docs/ux-writing/glossary.mdx
@@ -130,8 +130,14 @@ Never use check-out.
 </dd>
 
 <Dos>
-  <div className="hidden">Do</div>- Ready to check out? - When you’re done shopping, proceed to the
-  checkout. - Navigate to the checkout page.
+  <div className="hidden">Do</div>
+  <div>
+  
+    - Ready to check out? 
+    - When you’re done shopping, proceed to the checkout. 
+    - Navigate to the checkout page.
+
+  </div>
 </Dos>
 
 <dt className="font-bold mt-4">
@@ -624,3 +630,4 @@ Zoom2u
 Zoom2u is an on-demand, same-day express courier‎ in Australia. Treat Zoom2u as a proper noun and capitalize accordingly.
 </dd>
 </dl>
+
