--- a/packages/docs/design-docs/ux-writing/interactions.mdx
+++ b/packages/docs/design-docs/ux-writing/interactions.mdx
@@ -39,28 +39,30 @@ Avoid linking entire sentences. Instead, link only the most relevant portion of 
 Links outside of a sentence should follow the &#123;verb&#125; + &#123;noun&#125; format. Do not use periods or exclamation points. Question marks are fine within the context of a forgotten password link. Otherwise, avoid using them.
 
 <DosAndDonts>
-<Dos hideHeader={true}>
-<div className="hidden">
-**Do**
-</div>
-<div>
-[Forgot password?](https://www.bigcommerce.com/ "https://www.bigcommerce.com/")
+  <Dos>
+    <div className="hidden">
+    **Do**
+    </div>
+    <div>
 
-[Learn more](https://www.bigcommerce.com/ 'https://www.bigcommerce.com/')
+      - [Forgot password?](https://www.bigcommerce.com/ "https://www.bigcommerce.com/")
+      - [Learn more](https://www.bigcommerce.com/ 'https://www.bigcommerce.com/')
 
-</div>
-</Dos>
-<Donts hideHeader={true}>
-<div className="hidden">
-**Don't**
-</div>
-<div>
-[Learn more.](https://www.bigcommerce.com/ "https://www.bigcommerce.com/")
+    </div>
 
-[Edit settings!](https://www.bigcommerce.com/ 'https://www.bigcommerce.com/')
+  </Dos>
+  <Donts>
+    <div className="hidden">
+    **Don't**
+    </div>
+    <div>
 
-</div>
-</Donts>
+      - [Learn more.](https://www.bigcommerce.com/ "https://www.bigcommerce.com/")
+      - [Edit settings!](https://www.bigcommerce.com/ 'https://www.bigcommerce.com/')
+
+    </div>
+
+  </Donts>
 </DosAndDonts>
 
 ### External links
@@ -91,8 +93,18 @@ Users should know exactly what will happen when they click. Button language shou
 - Use sentence case and never include ending punctuation
 
 <Dos>
-  <div className="hidden">**Do**</div>- Learn more - Start trial - Save settings - Customize
-  dashboard - View more - Add new - Create channel
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - Learn more 
+    - Start trial 
+    - Save settings 
+    - Customize dashboard 
+    - View more 
+    - Add new 
+    - Create channel
+
+  </div>
 </Dos>
 
 ## Information patterns
@@ -149,6 +161,17 @@ When deprecating an older feature it’s important to set the right tone. Callin
 When writing about the checkout process, follow established patterns. Ecommerce has been around long enough that users have strong expectations about what the process should look like.
 
 <Dos>
-  <div className="hidden">**Do**</div>- Add to cart - Check out - Check out securely - Go to
-  checkout - View cart - Edit cart - Confirm payment - Place order
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - Add to cart 
+    - Check out 
+    - Check out securely 
+    - Go to checkout 
+    - View cart 
+    - Edit cart 
+    - Confirm payment 
+    - Place order
+
+  </div>
 </Dos>
