--- a/packages/docs/design-docs/ux-writing/localization.mdx
+++ b/packages/docs/design-docs/ux-writing/localization.mdx
@@ -56,7 +56,17 @@ Symbols like “#” and “&” don’t carry the same meaning in every languag
 Here are some British English words and phrases, common to ecommerce, and American English equivalents you should use instead.
 
 <ComparisonTable>
-  | American | British | |---|---| | Buy online, pick up in-store | Click and collect | | Canceled |
-  Cancelled | | Center | Centre | | Color | Colour | | Fulfill | Fulfil | | Gray | Grey | | Organize
-  | Organise | | Meter | Metre | | Ship, mail | Post |
+
+| American                     | British           |
+| ---------------------------- | ----------------- |
+| Buy online, pick up in-store | Click and collect |
+| Canceled                     | Cancelled         |
+| Center                       | Centre            |
+| Color                        | Colour            |
+| Fulfill                      | Fulfil            |
+| Gray                         | Grey              |
+| Organize                     | Organise          |
+| Meter                        | Metre             |
+| Ship, mail                   | Post              |
+
 </ComparisonTable>
