--- a/packages/docs/design-docs/ux-writing/mechanics.mdx
+++ b/packages/docs/design-docs/ux-writing/mechanics.mdx
@@ -100,7 +100,14 @@ Use the 3-letter month abbreviations: Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Se
 Use day-of-the-week abbreviations: Mon, Tue, Wed, Thu, Fri, Sat and Sun. Do not use a period after the day when abbreviating.
 
 <Dos>
-  <div className="hidden">**Do**</div>- Jan 5, 2022 - 1/02/22 - Mon, Jan 5, 2022
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - Jan 5, 2022 
+    - 1/02/22 
+    - Mon, Jan 5, 2022
+
+  </div>
 </Dos>
 
 **Time**
@@ -110,14 +117,24 @@ Don’t use periods in “AM” and “PM”
 Be sure to check the region’s time zone and if it’s daylight savings time or not. For example, CDT is Central Daylight Time and CST is Central Standard Time.
 
 <DosAndDonts>
-  <Dos>
-    <div className="hidden">**Do**</div>
-    <div>- 2:00 AM CST - 3:30 PM CDT</div>
-  </Dos>
-  <Donts>
-    <div className="hidden">**Don't**</div>
-    <div>- 2:00am CST - 3:30 P.M. CDT</div>
-  </Donts>
+<Dos>
+  <div className="hidden">**Do**</div>
+  <div>
+
+    - 2:00 AM CST
+    - 3:30 PM CDT
+
+  </div>
+</Dos>
+<Donts>
+  <div className="hidden">**Don't**</div>
+  <div>
+
+    - 2:00am CST.
+    - 3:30 P.M. CDT.
+
+  </div>
+</Donts>
 </DosAndDonts>
 
 **Phone numbers**
@@ -125,14 +142,24 @@ Be sure to check the region’s time zone and if it’s daylight savings time or
 Use hyphens to break up phone numbers. Don’t use parentheses or periods.
 
 <DosAndDonts>
-  <Dos>
-    <div className="hidden">**Do**</div>
-    <div>- 1-888-555-5555</div>
-  </Dos>
-  <Donts>
-    <div className="hidden">**Don't**</div>
-    <div>- 1 (888) 555-5555 - 1.888.555.5555</div>
-  </Donts>
+<Dos>
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - 888-555-5555
+    - 1-888-555-5555
+    
+  </div>
+</Dos>
+<Donts>
+  <div className="hidden">**Dont**</div>
+  <div>
+  
+    - 1 (888) 555-5555
+    - 1.888.555.5555
+
+  </div>
+</Donts>
 </DosAndDonts>
 
 ### Exclamation point
@@ -167,9 +194,14 @@ En dashes are used to indicate a range between two numbers. Don’t put spaces a
 If the number range is preceded by the words “from,” or “between,” then use the word “to” instead of an en dash.
 
 <Dos>
-  <div className="hidden">**Do**</div>- There are 500–1000 employees at BigCommerce. - There are
-  somewhere between 500 to 1000 employees at BigCommerce. - Philip will be in the office May 3 – May
-  5.
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - There are 500–1000 employees at BigCommerce. 
+    - There are somewhere between 500 to 1000 employees at BigCommerce. 
+    - Philip will be in the office May 3 – May 5.
+
+  </div>
 </Dos>
 
 **This is an em dash (—)**
@@ -177,8 +209,13 @@ If the number range is preceded by the words “from,” or “between,” then 
 Em dashes are used to indicate an abrupt pause or change in the middle of a sentence. Em dashes can also be used to call out or add emphasis to an important part of a sentence. Em dashes should always have a space before and after.
 
 <Dos>
-  <div className="hidden">**Do**</div>- Wait, that’s not a hyphen — it’s an em dash. - I went
-  shopping — on a site powered by BigCommerce — and bought a new pair of jeans.
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - Wait, that’s not a hyphen — it’s an em dash. 
+    - I went shopping — on a site powered by BigCommerce — and bought a new pair of jeans.
+
+  </div>
 </Dos>
 
 ### Percentages
@@ -216,7 +253,12 @@ Let’s look at an example:
 </div>
 
 <Dos>
-  <div className="hidden">**Do**</div>- Under “List your products on Google,” click “Get started.”
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - Under “List your products on Google,” click “Get started.”
+
+  </div>
 </Dos>
 
 ### Slashes
@@ -224,14 +266,20 @@ Let’s look at an example:
 You can use forward slashes “/” to indicate the word “or” between two words. When doing so, don’t use spaces before or after the slash. Don’t use backlashes “\”.
 
 <Dos>
-  <div className="hidden">**Do**</div>- if/when - and/or
+  <div className="hidden">**Do**</div>
+  <div>
+  
+    - if/when 
+    - and/or
+
+  </div>
 </Dos>
 
 On the other hand, when using a forward slash to signify “or” between two multi-word phrases, use spaces before and after the slash — it helps with readability.
 
-<Dos>
-  <div className="hidden">**Do**</div>- Download the app from the Apple App Store / Google Play
-  Store.
+<Dos hideHeader={true}>
+  <div className="hidden">**Do**</div>
+  <div>Download the app from the Apple App Store / Google Play Store</div>
 </Dos>
 
 ### Units of measurement
@@ -240,12 +288,14 @@ Add a space between numbers and units of measurement. Use all lowercase and alwa
 
 Don’t add a period. Don’t pluralize measurements (“lbs” is in common use and okay to use).
 
-<Dos>
-  <div className="hidden">**Do**</div>- 75 lbs, 14 in, 7 cm
+<Dos hideHeader={true}>
+  <div className="hidden">**Do**</div>
+  <div>75 lbs, 14 in, 7 cm</div>
 </Dos>
 
 When abbreviating units of data, always capitalize MB (megabyte) and GB (gigabyte). Don’t use Mb and Gb as these represent different units of measurement typically used when measuring Internet speeds.
 
-<Dos>
-  <div className="hidden">**Do**</div>- 10 MB, 10 GB
+<Dos hideHeader={true}>
+  <div className="hidden">**Do**</div>
+  <div>10 MB, 10 GB</div>
 </Dos>
