--- a/packages/docs/design-docs/ux-writing/glossary.mdx
+++ b/packages/docs/design-docs/ux-writing/glossary.mdx
@@ -130,8 +130,14 @@ Never use check-out.
 </dd>
 
 <Dos>
-  <div className="hidden">Do</div>- Ready to check out? - When you’re done shopping, proceed to the
-  checkout. - Navigate to the checkout page.
+  <div className="hidden">Do</div>
+  <div>
+  
+    - Ready to check out? 
+    - When you’re done shopping, proceed to the checkout. 
+    - Navigate to the checkout page.
+
+  </div>
 </Dos>
 
 <dt className="font-bold mt-4">
