change glossary icon per Georgia

--- a/packages/docs/design-docs/ux-writing/index.mdx
+++ b/packages/docs/design-docs/ux-writing/index.mdx
@@ -19,7 +19,7 @@ import Icon from '@components/icons/Icon';
     title="Jump to glossary"
     description="Learn how to use specific words within the BigCommerce ecosystem."
     href="glossary"
-    icon={<Icon name="world" />}
+    icon={<Icon name="glossary" />}
   />
 </CardGrid>
 
