--- a/packages/docs/design-docs/ux-writing/index.mdx
+++ b/packages/docs/design-docs/ux-writing/index.mdx
@@ -10,7 +10,7 @@ import Icon from '@components/icons/Icon';
     variant="secondary"
     title="Learn the basics"
     description="Get to know the basic principles on how we communicate with our users."
-    href="the-basics"
+    href="content-guide/basics"
     icon={<Icon name="widgets" />}
   />
   <LandingCard
@@ -18,7 +18,7 @@ import Icon from '@components/icons/Icon';
     variant="secondary"
     title="Jump to glossary"
     description="Learn how to use specific words within the BigCommerce ecosystem."
-    href="glossary"
+    href="content-guide/glossary"
     icon={<Icon name="glossary" />}
   />
 </CardGrid>
