upcase titles, change UX writing guide to UX Content Guide

--- a/packages/docs/design-docs/ux-writing/status-messages.mdx
+++ b/packages/docs/design-docs/ux-writing/status-messages.mdx
@@ -1,6 +1,6 @@
 import { Donts, Dos } from '@components/big-design/DosAndDonts';
 
-# Status messages
+# Status Messages
 
 Status messages help the user to understand what is happening in the application. Their common instances are success, warning and error messages.
 
