--- a/packages/docs/design-docs/ux-writing/the-basics.mdx
+++ b/packages/docs/design-docs/ux-writing/the-basics.mdx
@@ -2,7 +2,7 @@ import { ComparisonTable } from '@components/big-design/ComparisonTable';
 import { Donts, Dos, DosAndDonts } from '@components/big-design/DosAndDonts';
 import Icon from '@components/icons/Icon';
 
-# The basics
+# The Basics
 
 ## Voice and tone
 
@@ -70,7 +70,7 @@ Merchants who use BigCommerce come from a wide range of different social and eth
 
 The language we use inside our products should take into account the diversity of our users. To that end, communicate in such a way that is inclusive, being careful to avoid culturally ingrained biases that, actively or passively, exclude certain groups.
 
-The goal of this section of the UX writing guide is to give you a quick gloss on how to remove non-inclusive terms and phrases from the discourse of ecommerce.
+The goal of this section of the UX Content Guide is to give you a quick gloss on how to remove non-inclusive terms and phrases from the discourse of ecommerce.
 
 ### What is inclusive language?
 
