--- a/packages/docs/design-docs/ux-writing/index.mdx
+++ b/packages/docs/design-docs/ux-writing/index.mdx
@@ -2,7 +2,7 @@ import CardGrid from '@components/Card/CardGrid';
 import LandingCard from '@components/Card/LandingCard';
 import Icon from '@components/icons/Icon';
 
-# UX writing guide
+# UX Content Guide
 
 <CardGrid>
   <LandingCard
@@ -23,9 +23,9 @@ import Icon from '@components/icons/Icon';
   />
 </CardGrid>
 
-The purpose of the **BigCommerce UX writing guide** is to present a consistent, coherent and competent voice to BigCommerce merchants and their shoppers as it relates to in-product, customer-facing communication, aka microcopy.
+The purpose of the **BigCommerce UX Content Guide** is to present a consistent, coherent and competent voice to BigCommerce merchants and their shoppers as it relates to in-product, customer-facing communication, aka microcopy.
 
-Writers, researchers, designers and developers, both internal and external, who have a hand in designing BigCommerce products can refer to this guide anytime there’s a question about the writing.
+Writers, researchers, designers and developers, both internal and external, who have a hand in designing BigCommerce products can refer to this guide anytime there’s a question about UX writing.
 
 - Not sure if you need a period at the end of a heading?
 
